--- a/Pandas_vs_Modin.ipynb
+++ b/Pandas_vs_Modin.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Pandas vs Modin.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNwlBIAytoOBJSDXLuY20ry",
+      "authorship_tag": "ABX9TyP65s4voSxcjhvFLOsOsG4Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,6 +381,62 @@
           "text": [
             "DF Size = 78496075\n",
             "Modin Concat Time = 0.00878000259399414\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vRIyQFWOeYB3",
+        "outputId": "caca0929-ad7d-4eed-c9fc-45ed13b9a58d"
+      },
+      "source": [
+        "s = time.time()\n",
+        "dfp.groupby(by=\"0.586\")\t\n",
+        "e = time.time()\n",
+        "print(\"DF Size = {}\".format(dfp.size))\n",
+        "print(\"Pandas Group By Time = {}\".format(e-s))"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "DF Size = 78496075\n",
+            "Pandas Group By Time = 0.0004184246063232422\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FYMsiIYtf5v9",
+        "outputId": "403b537a-080a-42a5-eea6-ae0bf06f5b63"
+      },
+      "source": [
+        "s = time.time()\n",
+        "dfm.groupby(by=\"0.586\")\t\n",
+        "e = time.time()\n",
+        "print(\"DF Size = {}\".format(dfm.size))\n",
+        "print(\"Modin Group By Time = {}\".format(e-s))"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "DF Size = 78496075\n",
+            "Modin Group By Time = 0.003009319305419922\n"
           ],
           "name": "stdout"
         }
